web/src/components/dropzone/dropzone.css
@reference "~/pages/global.css";

.dropzone {
    position: fixed;
    left: 0;
    top: 0;
    width: 100vw;
    height: 100vh;
    z-index: 99;
    box-sizing: border-box;
    padding: 20px;
    background-color: #fff;

    .dropzone-wrapper {
        width: 100%;
        height: 100%;
        position: relative;
        display: flex;
        align-items: center;
        justify-content: center;
        overflow: hidden;
        flex-direction: column;
        gap: 10px;
        box-sizing: border-box;
        border: 2px dashed #143cee;
        border-radius: 20px;
        z-index: 9;
        background-color: #143cee1e;
    }

    svg {
        @apply size-12 stroke-gray-700;
    }

    span {
        @apply font-bold text-gray-900;
    }
}

